# yecs

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md
tests/: CMakeLists.txt  main.cpp  tests.h
yecs/: CMakeLists.txt  common.h  component_collection.h  component_storage.h  component_types_builder.h  entity_query.cc  entity_query.h  entity_set.h  system.h  world.cc  world.h  yecs.h
